# ley-line-open

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GETTING-STARTED.md  README.md  Taskfile.yml  apko.yaml  compatibility.json  compose.dev.yaml  entitlements.plist  image.Dockerfile  melange.yaml  rust-toolchain.toml  server.json
rs/: Cargo.toml  README.md
rs/ll-core/core/: Cargo.toml  README.md
rs/ll-core/core/src/: blob_store.rs  control.rs  head_digest.rs  interrupt.rs  layout.rs  lib.rs  mmap.rs  substrate.rs
rs/ll-core/ffi-helpers/: Cargo.toml
rs/ll-core/ffi-helpers/src/: lib.rs
rs/ll-core/public-schema/: Cargo.toml  README.md  build.rs
rs/ll-core/public-schema/capnp/: daemon.capnp  go.capnp
rs/ll-core/public-schema/proto/: graph.proto
rs/ll-core/public-schema/src/: lib.rs
rs/ll-core/schema/: Cargo.toml  README.md
rs/ll-core/schema-capnp/: Cargo.toml  README.md  build.rs
rs/ll-core/schema-capnp/examples/: gen_build_cache_vectors.rs  gen_leyline_net_vectors.rs
rs/ll-core/schema-capnp/schemas/: ast.capnp  binding.capnp  cache.capnp  common.capnp  go.capnp  head.capnp  net.capnp  source.capnp
rs/ll-core/schema-capnp/src/: canonical.rs  lib.rs
rs/ll-core/schema-capnp/tests/: build_cache_vectors_consistency.rs  cross_runtime_fixtures.rs  fileid_allowlist.rs  leyline_net_vectors.rs
rs/ll-core/schema-spec/: Cargo.toml  LAYOUT.md  README.md  _capability-mapping.md  _traits.capnp  _traits.md
rs/ll-core/schema-spec/src/: lib.rs
rs/ll-core/schema-spec/tests/: capability_mapping_coverage.rs  verify_confinement_digest.rs  verify_vectors_sha256.rs  version_bump_on_vector_change.rs
rs/ll-core/schema/src/: lib.rs
rs/ll-open/cas-ffi/: Cargo.toml  README.md
rs/ll-open/cas-ffi/src/: ffi.rs  lib.rs
rs/ll-open/cdc/: Cargo.toml
rs/ll-open/cdc/examples/: throughput.rs
rs/ll-open/cdc/src/: lib.rs
rs/ll-open/chat-embed/: Cargo.toml  README.md
rs/ll-open/chat-embed/src/: main.rs
rs/ll-open/cli/: Cargo.toml  README.md
rs/ll-open/cli-lib/: Cargo.toml  README.md
rs/ll-open/cli-lib/benches/: read_wall_time.rs  wal_concurrent_readers.rs  wal_snapshot_experiment.rs
rs/ll-open/cli-lib/src/: cmd_cdc.rs  cmd_daemon.rs  cmd_doctor.rs  cmd_inspect.rs  cmd_load.rs  cmd_lsp.rs  cmd_parse.rs  cmd_serve.rs  cmd_splice.rs  lib.rs  topology_pass.rs  walk.rs
rs/ll-open/cli-lib/tests/: adr_0029_baseline_test.rs  arena_query_blobs_test.rs  canonical_kind_defs_test.rs  cdc_activation_consumer_test.rs  cdc_command_test.rs  cdc_disabled_command_test.rs  characterization_blake3_sites.rs  cold_parse_perf_regression.rs  complex_build_pass_gate.rs  complex_build_pass_persist.rs  container_node_id_test.rs  def_ref_extraction_fidelity_test.rs  event_push_blackbox_test.rs  f1_arena_owner_admission.rs  f1_cfg_reflow_stable.rs  f2_warm_start_source_mismatch.rs  f3_stale_lock_recovery.rs  f4_deterministic_parse_across_restart.rs  f6_extraction_epoch_invalidation.rs  f7_injection_epoch_invalidation.rs  f_git_adversarial_verify.rs  hdc_math_gates.rs  injection_extraction_test.rs  integration.rs  ir_producer.rs  lsp_enrich_skip_surface_test.rs  phase_0_rag_throughput.rs  phase_0b_real_corpus_agreement.rs  phase_0b_real_ground_truth.rs  phase_0c_mi_agreement.rs  phase_1_hdc_retrieval.rs  phase_1c_hdc_statement_level.rs  pointer_store_dual_write_test.rs  qualifier_column_test.rs  session_observation_pass_test.rs  sheaf_ablation_test.rs  sheaf_gap3_invalidate_emit_test.rs  sheaf_loop_end_to_end_test.rs  sheaf_skip_safety.rs  sheaf_uds_blackbox_test.rs  (+6 more)
rs/ll-open/cli/src/: main.rs
rs/ll-open/fs/: Cargo.toml  README.md  cbindgen.toml
rs/ll-open/fs/include/: leyline_fs.h
rs/ll-open/fs/src/: activation.rs  chunked.rs  fuse.rs  gc.rs  graph.rs  lib.rs  nfs.rs  staging.rs  validate.rs  vector.rs
rs/ll-open/fs/tests/: arena_flush_e2e.rs  cdc_activation.rs  characterization_blake3_sites.rs  reader_pool.rs  smoke_ffi.c  smoke_ffi.rs  vector_with_graph.rs
rs/ll-open/hdc/: Cargo.toml  README.md
rs/ll-open/hdc/benches/: hdc_perf.rs
rs/ll-open/hdc/src/: calibrate.rs  canonical.rs  codebook.rs  combined.rs  encoder.rs  lib.rs  query.rs  schema.rs  sheaf.rs  sql_udf.rs  test_util.rs  util.rs
rs/ll-open/lsp/: Cargo.toml  README.md
rs/ll-open/lsp/src/: client.rs  languages.rs  lib.rs  project.rs  protocol.rs
rs/ll-open/schema-bridge/: Cargo.toml  README.md
rs/ll-open/schema-bridge/src/: error.rs  lib.rs  main.rs
rs/ll-open/schema-bridge/tests/: integration.rs
rs/ll-open/sheaf/: Cargo.toml  README.md
rs/ll-open/sheaf/benches/: git_replay_invalidation.rs  restriction_git_replay.rs
rs/ll-open/sheaf/src/: cache.rs  complex.rs  learn.rs  lib.rs  merkle.rs  restriction_cache.rs  restriction_review.rs  sparse.rs  topology.rs
rs/ll-open/sheaf/tests/: ast_structural_discrimination.rs  embedding_stalk_divergence.rs  falsifiability_gates.rs  real_repo_sheaf_bench.rs  restriction_review_public_api.rs  restriction_review_real.rs  restriction_review_toy.rs
rs/ll-open/sign/: Cargo.toml  NOTICE  README.md  cbindgen.toml
rs/ll-open/sign/src/: cert_chain.rs  cms.rs  ffi.rs  kid.rs  lib.rs  root_signer.rs
rs/ll-open/sign/tests/: confinement_digest_extension_test.rs  host_adversarial.rs  host_integration.rs  wire_compat.rs
rs/ll-open/text-search/: Cargo.toml  README.md
rs/ll-open/text-search/src/: lib.rs  null.rs  witchcraft.rs
rs/ll-open/text-search/tests/: acceptance_gates.rs  substrate_non_leak.rs  trait_contract.rs
rs/ll-open/ts/: Cargo.toml  README.md
rs/ll-open/ts/src/: cfg.rs  injections.rs  languages.rs  lib.rs  project.rs  pyproject.rs  query_engine.rs  refs.rs  schema.rs  splice.rs
rs/ll-open/ts/tests/: mache_compat.rs
rs/ll-open/vcs/: Cargo.toml  NOTICE  README.md
rs/ll-open/vcs/src/: lib.rs
rs/pkgconfig/: fuse.pc
rs/tools/cargo-toml-projector/: Cargo.toml
rs/tools/cargo-toml-projector/src/: main.rs
rs/tools/compat-gen/: Cargo.toml
rs/tools/compat-gen/src/: main.rs
rs/tools/server-json-gen/: Cargo.toml
rs/tools/server-json-gen/src/: main.rs
rs/tools/smell-projector/: Cargo.toml
rs/tools/smell-projector/src/: main.rs
(+242 files in other folders)
