[package]
name = "leyline-core"
version = "0.7.6"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
# T2.2: BLAKE3 for σ(arena buffer) computed at snapshot time. Locked
# to BLAKE3 per Σ §3.4 (decade write-up 2026-merkle-cas-substrate.md).
blake3 = { workspace = true }

[features]
default = []
interrupt = []

[dev-dependencies]
tempfile = { workspace = true }
