[package]
name = "leyline-public-schema"
version = "0.7.4"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
# ADR-0014 §3 — exact-pin declared in workspace (matches schema-capnp, cli-lib, lsp).
capnp = { workspace = true }
# Runtime JSON codec for the daemon protocol — annotations in
# `capnp/daemon.capnp` (`$Json.name(...)`) reference capnp-json's
# annotation IDs at compile time; runtime `to_json` / `from_json`
# calls live in `leyline-cli-lib::daemon`. See ADR-0014's interim
# status section.
capnp-json = { workspace = true }

[build-dependencies]
# ADR-0014 §3 — exact-pin declared in workspace (matches schema-capnp).
capnpc = { workspace = true }
