[package]
name = "leyline-schema-capnp"
version = "0.7.8"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Cap'n Proto schemas for Σ event log — typed producer/consumer contract (T8)"

[dependencies]
# ADR-0014 §3 (Pin the toolchain triplet): exact-pin capnp/capnpc so a
# silent semver bump can't change the bytes of canonical-encoded
# messages out from under the cross-runtime fixture suite (F8.6.4).
# Bumping requires explicit human review + cross-runtime byte-equality
# check; the friction is intentional. See docs/adr/0014-capnp-as-protocol.md.
# Exact-pin declared in workspace (see rs/Cargo.toml [workspace.dependencies]).
capnp = { workspace = true }

[dev-dependencies]
# Used by the gen_build_cache_vectors example (writes cloister-spec/build-cache/v1
# conformance vectors). Pinned to substrate's BLAKE3 dep (leyline-core also pins
# blake3 = "1").
blake3 = { workspace = true }
# Used to author the OCI manifest JSON in the vector generator. Serde is the
# repository default JSON shape (already a transitive dep via several crates).
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Hex encoding for digest strings.
hex = { workspace = true }

[build-dependencies]
capnpc = { workspace = true }

[[example]]
name = "gen_build_cache_vectors"
# Regenerates cloister-spec/build-cache/v1/vectors/* deterministically.
# Usage:
#   cargo run -p leyline-schema-capnp --example gen_build_cache_vectors -- \
#       ../../cloister/cloister-spec/build-cache/v1/vectors
path = "examples/gen_build_cache_vectors.rs"

[features]
# T8.10: regenerate cross-runtime fixtures. With this feature on, the
# fixture tests overwrite the committed `.bin` files with fresh
# canonical-encoded output instead of asserting against them. Use:
#
#     cargo test -p leyline-schema-capnp --features regen-fixtures \
#         --test cross_runtime_fixtures
#
# Then commit the regenerated `.bin` files. Without this feature the
# default test run asserts that the producer's canonical bytes are
# byte-equal to the committed fixtures — the strongest CI invariant
# in T8 (ADR-0014 §F8.6.4).
regen-fixtures = []
