[package]
name = "leyline-chat-embed"
version = "0.5.8"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Semantic search over Claude Code chat session databases (mache ingest claude-chats output) via fastembed/MiniLM."

[[bin]]
name = "chat-embed"
path = "src/main.rs"

[dependencies]
fastembed = "5"
rusqlite = { version = "0.39", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
