[package]
name = "leyline-chat-embed"
version = "0.6.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Semantic search over Claude Code chat session databases (mache ingest claude-chats output) via fastembed/MiniLM."

[[bin]]
name = "chat-embed"
path = "src/main.rs"

[dependencies]
fastembed = "5"
rusqlite = { workspace = true, features = ["bundled"] }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
