[package]
name = "leyline-cli-lib"
version = "0.6.0"
edition = "2024"

[features]
default = ["lsp", "validate", "hdc"]
lsp = ["dep:leyline-lsp"]
# Tree-sitter syntactic validation surface exposed as a daemon op for
# mache's writeback path (ley-line-open-fa8638). Pulls leyline-fs's
# `validate` feature only; does not pull `fuse`/`nfs`. Default-on so
# the op is always available; turn off for ultra-slim builds.
validate = ["leyline-fs/validate"]
mount = ["leyline-fs/nfs", "leyline-fs/fuse", "leyline-fs/validate"]
vec = ["dep:sqlite-vec", "dep:fastembed"]
# HDC structural-equivalence surface exposed as daemon ops
# (ley-line-open-c32596). Pulls leyline-hdc + leyline-ts's `rust`
# feature (HDC's RustCanonicalMap pairs with tree-sitter-rust). Default-
# on so the ops are always reachable when querying; the substrate side
# (populating _hdc rows) is a separate enrichment-pass concern.
hdc = ["dep:leyline-hdc", "leyline-ts/rust"]
# Wires the text_search daemon op. Base cli-lib defaults to NullEngine
# (structured "no backend" error); private extensions install a real
# engine — e.g. WitchcraftEngine — via DaemonExt::text_search_engine().
# The text-search crate's own `engine-witchcraft` feature is opt-in at
# the extension level, not pulled by this base feature.
text-search = ["dep:leyline-text-search"]

[dependencies]
leyline-lsp = { path = "../lsp", optional = true }
leyline-hdc = { path = "../hdc", optional = true }
leyline-text-search = { path = "../text-search", optional = true }
leyline-sheaf = { path = "../sheaf" }
leyline-ts = { path = "../ts", features = ["html", "markdown", "json", "yaml", "go", "python", "elixir", "hcl", "rust", "proto"] }
leyline-schema = { path = "../../ll-core/schema" }
leyline-schema-capnp = { path = "../../ll-core/schema-capnp" }
leyline-public-schema = { path = "../../ll-core/public-schema" }
leyline-core = { path = "../../ll-core/core" }
capnp = "=0.25.0"  # ADR-0014 §3 — exact-pin (see schema-capnp/Cargo.toml)
capnp-json = "=0.1.0"  # daemon wire codec (see daemon/wire.rs and ADR-0014 interim status)
blake3 = "1"
# MCP wire auth (ADR-0022 / bead ley-line-open-b885d1). Constant-time
# token comparison + random token generation + hex encoding.
subtle = "2"
rand = "0.9"
hex = "0.4"
leyline-fs = { path = "../fs", default-features = false }
rusqlite = { version = "0.39", features = ["bundled", "serialize"] }
sqlite-vec = { version = "0.1", optional = true }
# Real embedder backend for the `vec` feature. Mirrors LL's `leyline-embed`
# (closed sister repo) — fastembed wraps ONNX-Runtime to run small
# MiniLM-class models locally. Gated under `vec` so the default headless
# build stays slim; ZeroEmbedder is the fallback when this feature is off.
fastembed = { version = "5", optional = true }
tree-sitter = "0.26"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
base64 = "0.22"
dirs = "6"
which = "8"
rayon = "1"
tempfile = "3"

# Unix-only: flock(2) for daemon arena admission control
# (bead ley-line-open-0cba88). Kept as a direct dep so the fcntl call
# path is auditable; alternatives (fs2/fs4/rustix/nix) either drag more
# API surface than we need or aren't already transitive deps.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
rusqlite = { version = "0.39", features = ["bundled", "serialize"] }
leyline-core = { path = "../../ll-core/core" }
bytemuck = { version = "1.14", features = ["derive"] }
# Mechanical-reach spy for the L10 `agreement` op (ADR-0020 §3 Gate 3).
# Re-enables `leyline-sheaf` with its `test-spy` feature so the dev
# build sees `DETECT_VIOLATIONS_REACH_COUNT`. The production cdylib
# does NOT pull this feature (release builds stay zero-cost).
leyline-sheaf = { path = "../sheaf", features = ["test-spy"] }
# `tower::ServiceExt::oneshot` for the MCP auth middleware end-to-end
# tests (daemon::auth::tests). Production uses tower transitively
# through axum's middleware stack; this dev-dep exposes the trait
# directly for synchronous service-call testing.
tower = "0.5"

[[bench]]
name = "wal_snapshot_experiment"
path = "benches/wal_snapshot_experiment.rs"
harness = false

[[bench]]
name = "wal_concurrent_readers"
path = "benches/wal_concurrent_readers.rs"
harness = false

# ─────────────────────────────────────────────────────────────────────
# Σ falsification suite F1–F5 (bead ley-line-open-9e7a9d / T1.3).
#
# Each F-gate is a standalone integration test that fails CI if the
# named substrate axiom / requirement is broken. Files live under
# `tests/substrate/` per the bead's file-path spec; each is registered
# here so Cargo compiles it as an integration test binary (Cargo does
# not auto-discover subdirectories under `tests/`).
#
# F6 is a TLA+/Apalache canonicality search — out of scope for this
# integration-test suite (tracked separately as bead T7.6).
# ─────────────────────────────────────────────────────────────────────

[[test]]
name = "f1_crash_mid_write"
path = "tests/substrate/f1_crash_mid_write.rs"

[[test]]
name = "f2_concurrent_writers_throughput"
path = "tests/substrate/f2_concurrent_writers_throughput.rs"

[[test]]
name = "f3_mitm_gossip_integrity"
path = "tests/substrate/f3_mitm_gossip_integrity.rs"

[[test]]
name = "f4_diff_complexity"
path = "tests/substrate/f4_diff_complexity.rs"

[[test]]
name = "f5_composition_seams"
path = "tests/substrate/f5_composition_seams.rs"
