[package]
name = "leyline-cli-lib"
version = "0.7.3"
edition = "2024"
license = "AGPL-3.0-or-later"

[features]
default = ["lsp", "validate", "hdc"]
lsp = ["dep:leyline-lsp"]
# Tree-sitter syntactic validation surface exposed as a daemon op for
# mache's writeback path (ley-line-open-fa8638). Pulls leyline-fs's
# `validate` feature only; does not pull `fuse`/`nfs`. Default-on so
# the op is always available; turn off for ultra-slim builds.
validate = ["leyline-fs/validate"]
mount = ["leyline-fs/nfs", "leyline-fs/fuse", "leyline-fs/validate"]
vec = ["dep:sqlite-vec", "dep:fastembed"]
# HDC structural-equivalence surface exposed as daemon ops
# (ley-line-open-c32596). Pulls leyline-hdc + leyline-ts's `rust`
# feature (HDC's RustCanonicalMap pairs with tree-sitter-rust). Default-
# on so the ops are always reachable when querying; the substrate side
# (populating _hdc rows) is a separate enrichment-pass concern.
hdc = ["dep:leyline-hdc", "leyline-ts/rust"]
# Wires the text_search daemon op. Base cli-lib defaults to NullEngine
# (structured "no backend" error); private extensions install a real
# engine — e.g. WitchcraftEngine — via DaemonExt::text_search_engine().
# The text-search crate's own `engine-witchcraft` feature is opt-in at
# the extension level, not pulled by this base feature.
text-search = ["dep:leyline-text-search"]

[dependencies]
leyline-lsp = { path = "../lsp", optional = true }
leyline-hdc = { path = "../hdc", optional = true }
leyline-text-search = { path = "../text-search", optional = true }
leyline-sheaf = { path = "../sheaf" }
leyline-ts = { path = "../ts", features = ["html", "markdown", "json", "yaml", "go", "python", "elixir", "hcl", "rust", "proto", "javascript", "typescript"] }
leyline-schema = { path = "../../ll-core/schema" }
leyline-schema-capnp = { path = "../../ll-core/schema-capnp" }
leyline-public-schema = { path = "../../ll-core/public-schema" }
leyline-core = { path = "../../ll-core/core" }
# ADR-0014 §3 — exact-pin declared in workspace (see schema-capnp/Cargo.toml).
capnp = { workspace = true }
# daemon wire codec (see daemon/wire.rs and ADR-0014 interim status).
capnp-json = { workspace = true }
blake3 = { workspace = true }
# MCP wire auth (ADR-0022 / bead ley-line-open-b885d1). Constant-time
# token comparison + random token generation + hex encoding.
subtle = "2"
rand = { workspace = true }
hex = { workspace = true }
leyline-fs = { path = "../fs", default-features = false }
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
# WAL adoption 15b (bead ley-line-open-f0239d): connection pool for
# concurrent-reader win. r2d2_sqlite 0.34 pairs with rusqlite 0.39;
# newer versions require rusqlite 0.40 and would fan out a workspace
# bump we don't want here.
r2d2 = "0.8"
r2d2_sqlite = "0.34"
sqlite-vec = { version = "0.1", optional = true }
# Real embedder backend for the `vec` feature. Mirrors LL's `leyline-embed`
# (closed sister repo) — fastembed wraps ONNX-Runtime to run small
# MiniLM-class models locally. Gated under `vec` so the default headless
# build stays slim; ZeroEmbedder is the fallback when this feature is off.
fastembed = { version = "5", optional = true }
tree-sitter = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = "0.8"
base64 = "0.22"
dirs = "6"
which = "8"
rayon = "1"
tempfile = { workspace = true }
# `ignore` crate — ripgrep's + mache's source-tree walker. Bead
# ley-line-open-25685d: `collect_files` now honors `.gitignore`,
# `.ignore`, `.git/info/exclude`, and global git excludes so LLO
# stops indexing user-ignored `data/`, model checkpoints, etc.
# `is_bloat_dir` is layered on top via `filter_entry` so
# `node_modules`/`target`/`vendor`/etc still get skipped even
# without a matching gitignore entry.
ignore = "0.4"

# Unix-only: flock(2) for daemon arena admission control
# (bead ley-line-open-0cba88). Kept as a direct dep so the fcntl call
# path is auditable; alternatives (fs2/fs4/rustix/nix) either drag more
# API surface than we need or aren't already transitive deps.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
leyline-core = { path = "../../ll-core/core" }
bytemuck = { workspace = true, features = ["derive"] }
# Mechanical-reach spy for the L10 `agreement` op (ADR-0020 §3 Gate 3).
# Re-enables `leyline-sheaf` with its `test-spy` feature so the dev
# build sees `DETECT_VIOLATIONS_REACH_COUNT`. The production cdylib
# does NOT pull this feature (release builds stay zero-cost).
leyline-sheaf = { path = "../sheaf", features = ["test-spy"] }
# `tower::ServiceExt::oneshot` for the MCP auth middleware end-to-end
# tests (daemon::auth::tests). Production uses tower transitively
# through axum's middleware stack; this dev-dep exposes the trait
# directly for synchronous service-call testing.
tower = "0.5"
# Serialize process-env mutations across parallel cargo-test workers
# (bead ley-line-open-d71cf6). `#[serial("env_LEYLINE_SHEAF_ABLATION_LOG")]`
# makes the "I mutate this env var" property compile-checked-by-label
# across the test suite, not just an inline SAFETY comment. Same
# pattern the `leyline-sign` dev-deps introduced under cloister-da0f35.
serial_test = "3"

[[bench]]
name = "wal_snapshot_experiment"
path = "benches/wal_snapshot_experiment.rs"
harness = false

[[bench]]
name = "wal_concurrent_readers"
path = "benches/wal_concurrent_readers.rs"
harness = false

# ADR-0026 Phase 2.0 — F2 read-side measurement infrastructure
# (bead ley-line-open-335d34). Captures the row-projected p50/p99
# baseline the Phase 2 pointer-store consumer migration has to beat
# by ≥2× per §9.2.4. Same `harness = false` + `Instant::now()` shape
# as the WAL benches — no criterion dev-dep needed for the p50/p99
# artifact this ships.
[[bench]]
name = "read_wall_time"
path = "benches/read_wall_time.rs"
harness = false

# ─────────────────────────────────────────────────────────────────────
# Σ falsification suite F1–F5 (bead ley-line-open-9e7a9d / T1.3).
#
# Each F-gate is a standalone integration test that fails CI if the
# named substrate axiom / requirement is broken. Files live under
# `tests/substrate/` per the bead's file-path spec; each is registered
# here so Cargo compiles it as an integration test binary (Cargo does
# not auto-discover subdirectories under `tests/`).
#
# F6 is a TLA+/Apalache canonicality search — out of scope for this
# integration-test suite (tracked separately as bead T7.6).
# ─────────────────────────────────────────────────────────────────────

[[test]]
name = "f1_crash_mid_write"
path = "tests/substrate/f1_crash_mid_write.rs"

[[test]]
name = "f2_concurrent_writers_throughput"
path = "tests/substrate/f2_concurrent_writers_throughput.rs"

[[test]]
name = "f3_mitm_gossip_integrity"
path = "tests/substrate/f3_mitm_gossip_integrity.rs"

[[test]]
name = "f4_diff_complexity"
path = "tests/substrate/f4_diff_complexity.rs"

[[test]]
name = "f5_composition_seams"
path = "tests/substrate/f5_composition_seams.rs"
