[package]
name = "leyline-cli"
version = "0.5.3"
edition = "2024"

[[bin]]
name = "leyline"
path = "src/main.rs"

[features]
default = ["lsp"]
lsp = ["leyline-cli-lib/lsp"]
mount = ["leyline-cli-lib/mount"]
vec = ["leyline-cli-lib/vec"]

[dependencies]
leyline-cli-lib = { path = "../cli-lib", default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
env_logger = "0.11"
libc = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
