[package]
name = "leyline-cli"
version = "0.6.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "leyline"
path = "src/main.rs"

[features]
default = ["lsp"]
lsp = ["leyline-cli-lib/lsp"]
mount = ["leyline-cli-lib/mount"]
vec = ["leyline-cli-lib/vec"]

[dependencies]
leyline-cli-lib = { path = "../cli-lib", default-features = false }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
dirs = "6"
env_logger = "0.11"
libc = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
