[package]
name = "leyline-cli"
version = "0.10.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "leyline"
path = "src/main.rs"

[features]
# Match cli-lib's baseline defaults — lsp + validate + hdc are pure-Rust
# with no system-dep cost, and cli-lib treats them as always-available.
# `mount` (libfuse-t/libfuse system dep) and `vec` (fastembed + ONNX
# download at first use) stay opt-in to keep the default build portable.
default = ["lsp", "validate", "hdc"]
lsp = ["leyline-cli-lib/lsp"]
mount = ["leyline-cli-lib/mount"]
vec = ["leyline-cli-lib/vec"]
validate = ["leyline-cli-lib/validate"]
hdc = ["leyline-cli-lib/hdc"]
text-search = ["leyline-cli-lib/text-search"]
# Meta-feature — everything the CLI can expose EXCEPT mount. Use for
# `task install:full` or `cargo build -p leyline-cli --features all`
# when you want the full daemon-op surface WITHOUT the libfuse-t / libfuse
# system-dep requirement (mount links to fuser, which needs libfuse-t
# at *runtime* on macOS — the binary won't launch at all if it's missing,
# even for non-mount ops).
#
# For a build that includes mount, use `full` explicitly:
#   cargo build -p leyline-cli --features full
# or `task install:full+mount` — but you MUST have libfuse-t (macOS
# `brew install fuse-t`) or libfuse-dev (Linux) available at runtime.
all = ["lsp", "vec", "validate", "hdc", "text-search"]
# Everything, including mount. Runtime-requires libfuse-t / libfuse.
full = ["lsp", "mount", "vec", "validate", "hdc", "text-search"]

[dependencies]
leyline-cli-lib = { path = "../cli-lib", default-features = false }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
dirs = "6"
env_logger = "0.11"
libc = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
