[package]
name = "leyline-fs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["validate", "fuse", "nfs"]
validate = [
    "dep:tree-sitter",
    "dep:tree-sitter-go",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-elixir",
]
fuse = ["dep:fuser", "dep:libc"]
nfs = ["dep:nfsserve"]
vec = ["dep:sqlite-vec"]
splice = ["dep:leyline-ts"]

[dependencies]
leyline-core = { path = "../../ll-core/core" }
leyline-schema = { path = "../../ll-core/schema" }
anyhow = "1.0"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
fuser = { version = "0.15", optional = true }
libc = { version = "0.2", optional = true }
log = "0.4"
rusqlite = { version = "0.34", features = ["bundled", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nfsserve = { version = "0.10", optional = true }
crossbeam-queue = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["net"] }
tree-sitter = { version = "0.26", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-elixir = { version = "0.3.5", optional = true }
sqlite-vec = { version = "0.1", optional = true }
leyline-ts = { path = "../ts", optional = true }

[dev-dependencies]
tempfile = "3"
leyline-ts = { path = "../ts" }
